fixed scrolling on mobile

--- a/css/texas.css
+++ b/css/texas.css
@@ -4,8 +4,8 @@ body, html {
     background-color: #000;
     font-family: Lato, "Lucida Console", Monaco, monospace;
     font-size: 16px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
+    position: fixed;
 }
 
 .landing-container {
